[package]
name = "iat_unhook"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Vella (@Kharosx0) <cvella@signal-labs.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "iat_unhook_lib"
path = "src/lib.rs"

[[bin]]
name = "iat_unhook_bin"
path = "src/bin.rs"

[dependencies]
iced-x86 = "1.18.0"
bitflags = "1.3.2"

[dependencies.windows]
version = "0.46.0"
features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_Memory",
]